# nyse-trading-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEGATRON_AUDIT_2026-04-19.md  README.md  WHITEPAPER.md  __main__.py  backtest.py  bot.py  bot.py.backup  claude_tuner.py  config.py  docker-compose.yml  gemini_tuner.py  pyproject.toml  pytest.ini  requirements.txt
.claude/commands/: megatron.md
broker/: __init__.py  alpaca.py  order_tracker.py  stream.py
data/: handler.py  ingestion.py
models/: bot_initializer.py  causal_rl_manager.py  causal_signal_manager.py  causal_wrapper.py  env.py  features.py  initializer.py  multi_agent_system.py  policies.py  portfolio_env.py  ppo_utils.py  stacking_ensemble.py  trainer.py
strategy/: adverse_selection.py  alpha_attribution.py  bayesian_sizing.py  cognitive.py  correlation_discount.py  cross_sectional.py  earnings_filter.py  execution_scorecard.py  liquidity_scaler.py  meta_filter.py  portfolio_rebalancer.py  regime.py  risk.py  signals.py  slippage_predictor.py  universe.py
tests/: conftest.py
utils/: helpers.py  local_llm.py  log_setup.py
