[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyse_bot"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "alpaca-py",
    # ... add your others
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]
