[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyse-trading-bot"
version = "2.8.0"
description = "Autonomous self-improving algorithmic trading system with deep RL, causal inference, and LLM self-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Matthew McCartney"},
]
keywords = ["trading", "reinforcement-learning", "ppo", "causal-inference", "algorithmic-trading"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]
